# Copyright 2018 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Do nothing.
group("all") {
  deps = [
    ":install_init",
    ":install_script",
  ]
}

install_config("install_init") {
  sources = [ "scripts/chromeos-disk-firmware-update.conf" ]
  install_path = "/etc/init"
}

install_config("install_script") {
  sources = [ "scripts/chromeos-disk-firmware-update.sh" ]
  install_path = "/usr/sbin"
  type = "executable"
}
